; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/host1x/hw/extr_cdma_hw.c_cdma_timeout_destroy.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/host1x/hw/extr_cdma_hw.c_cdma_timeout_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.host1x_cdma = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.host1x_cdma*)* @cdma_timeout_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cdma_timeout_destroy(%struct.host1x_cdma* %0) #0 {
  %2 = alloca %struct.host1x_cdma*, align 8
  store %struct.host1x_cdma* %0, %struct.host1x_cdma** %2, align 8
  %3 = load %struct.host1x_cdma*, %struct.host1x_cdma** %2, align 8
  %4 = getelementptr inbounds %struct.host1x_cdma, %struct.host1x_cdma* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load %struct.host1x_cdma*, %struct.host1x_cdma** %2, align 8
  %10 = getelementptr inbounds %struct.host1x_cdma, %struct.host1x_cdma* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %12 = call i32 @cancel_delayed_work(i32* %11)
  br label %13

13:                                               ; preds = %8, %1
  %14 = load %struct.host1x_cdma*, %struct.host1x_cdma** %2, align 8
  %15 = getelementptr inbounds %struct.host1x_cdma, %struct.host1x_cdma* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  store i32 0, i32* %16, align 4
  ret void
}

declare dso_local i32 @cancel_delayed_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
